--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "Lab1"]
 	path = Lab1
 	url = https://github.com/blrichards/EE445L_Lab1.git
+[submodule "Lab2"]
+	path = Lab2
+	url = https://github.com/blrichards/EE445L_Lab2
+	branch = master
