--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 	path = Lab2
 	url = https://github.com/blrichards/EE445L_Lab2
 	branch = master
+[submodule "Lab3"]
+	path = Lab3
+	url = https://github.com/EE445L-F18/lab3-br24964_ram5295.git
